deploy/40-exporter-metallb.yaml
apiVersion: v1
kind: Service
metadata:
  name: usb-ip-exporter-lb
  namespace: default
  labels:
    app.kubernetes.io/part-of: usb-ip-kubevirt
  annotations:
    metallb.universe.tf/address-pool: usb-ip-exporter-ip
spec:
  type: LoadBalancer
  selector:
    usb-ip-role: exporter
  ports:
    - name: usbip
      port: 3240
      targetPort: 3240
      protocol: TCP
